add navigation buttons for mobile support

--- a/packages/web/src/style.css
+++ b/packages/web/src/style.css
@@ -55,6 +55,11 @@ body {
   width: 100px;
 }
 
+.button-container {
+  display: flex;
+  gap: 5px;
+}
+
 .renderCanvas {
   margin: 0;
   width: 100%;
