add status bar to display info on graph

--- a/packages/web/src/style.css
+++ b/packages/web/src/style.css
@@ -55,6 +55,15 @@ body {
   width: 100px;
 }
 
+.status-bar {
+  font-size: 12px;
+}
+
+.status-bar > span {
+  margin: 0;
+  font-weight: bold;
+}
+
 .button-container {
   display: flex;
   gap: 10px;
