--- a/packages/web/src/style.css
+++ b/packages/web/src/style.css
@@ -69,6 +69,7 @@ body {
 }
 
 .button-container > button {
+  cursor: pointer;
   padding: 2px 5px;
   width: 35px;
 }
@@ -77,4 +78,57 @@ body {
   margin: 0;
   width: 100%;
   height: 500px;
+}
+
+.tooltip {
+  display: inline-block;
+  position: relative;
+}
+
+.tooltip::after {
+  display: inline-block;
+  cursor: pointer;
+  content: '?';
+  margin-left: 6px;
+  width: 20px;
+  height: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  background: #f0f0f0;
+  text-decoration: none;
+  text-align: center;
+  border: 1px solid;
+  border-radius: 50%;
+}
+
+.tooltip > .content {
+  display: none;
+  margin-left: 10px;
+  padding: 0 10px;
+  /* top: 50%;
+  left: 100%;
+  transform: translate(0, -50%); */
+  top: 40px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  min-width: 300px;
+  background-color: #f0f0f0;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  border-radius: 8px;
+  position: absolute;
+  z-index: 999999;
+  box-sizing: border-box;
+  box-shadow: 0 1px 8px rgba(0,0,0,0.5);
+}
+
+.tooltip:hover > .content {
+  display: block;
+}
+
+@media only screen and (max-width: 425px)  {
+  .tooltip {
+    display: none;
+  }
 }
