--- a/packages/web/src/ui/style.css
+++ b/packages/web/src/ui/style.css
@@ -3,7 +3,6 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-
   color: #242424;
 }
 
@@ -22,7 +21,7 @@ body {
   margin: 0;
   padding: 10px 20px;
   background: #ffb1b1;
-  border: 1px rgb(255, 137, 10) solid;
+  border: 1px rgb(255 137 10) solid;
   border-radius: 3px;
 }
 
@@ -54,57 +53,4 @@ body {
   margin: 0;
   width: 100%;
   height: 500px;
-}
-
-.tooltip {
-  display: inline-block;
-  position: relative;
-}
-
-.tooltip::after {
-  display: inline-block;
-  cursor: pointer;
-  content: '?';
-  margin-left: 6px;
-  width: 20px;
-  height: 20px;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: bold;
-  background: #f0f0f0;
-  text-decoration: none;
-  text-align: center;
-  border: 1px solid;
-  border-radius: 50%;
-}
-
-.tooltip > .content {
-  display: none;
-  margin-left: 10px;
-  padding: 0 10px;
-  /* top: 50%;
-  left: 100%;
-  transform: translate(0, -50%); */
-  top: 40px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  min-width: 300px;
-  background-color: #f0f0f0;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 14px;
-  border-radius: 8px;
-  position: absolute;
-  z-index: 999999;
-  box-sizing: border-box;
-  box-shadow: 0 1px 8px rgba(0,0,0,0.5);
-}
-
-.tooltip:hover > .content {
-  display: block;
-}
-
-@media only screen and (max-width: 425px)  {
-  .tooltip {
-    display: none;
-  }
 }
