--- a/packages/web/src/ui/components/header.scss
+++ b/packages/web/src/ui/components/header.scss
@@ -1,6 +1,27 @@
 .header {
     margin: 0;
-    padding: 5px 10px;
+    padding: 0 8px;
     border: 1px #929292 solid;
     background: #f6f6f6;
+
+    &__nav-container {
+        display: flex;
+        gap: 10px;
+        margin-bottom: 8px;
+
+        > button {
+            cursor: pointer;
+            padding: 2px 5px;
+            width: 35px;
+        }
+    }
+
+    &__status-bar {
+        font-size: 12px;
+
+        > span {
+            margin: 0;
+            font-weight: bold;
+        }
+    }
 }
