--- a/packages/web/src/ui/components/elements.scss
+++ b/packages/web/src/ui/components/elements.scss
@@ -1,17 +1,13 @@
 // Used by Header component
 .form-group {
     display: flex;
-    margin: 5px 0;
+    flex-direction: column;
 
     > select {
         width: 200px;
         height: 25px;
         border: 1px #929292 solid;
         border-radius: 3px;
-    }
-
-    > label {
-        width: 100px;
     }
 }
 
